-
Type:
Bug
-
Resolution: Done
-
Priority:
Trivial - P5
-
Affects Version/s: None
-
Component/s: Aggregation Framework
-
Fully Compatible
-
ALL
-
Quint Iteration 4
-
None
-
None
-
None
-
None
-
None
-
None
-
None
"it's" should be "its" in the following message (similarly for the corresponding error on $map):
> db.agg.aggregate([{$project: {b: {$filter: []}}}]);
assert: command failed: {
"errmsg" : "$filter only supports an object as it's argument",
"code" : 28646,
"ok" : 0
} : aggregate failed
- is related to
-
SERVER-17943 add $filter expression to $project to work with $map and $reduce
-
- Closed
-