SERVER-18423: Fix typo in aggregation $map and $filter error messages